# jax

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  WORKSPACE
examples/jax_cpp/: BUILD
jax/: BUILD
jax/experimental/jax2tf/: call_tf.py
jax/tools/: BUILD
jaxlib/: BUILD  jax.bzl
jaxlib/mlir/: BUILD.bazel
tests/: BUILD
